# squad

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  squad.config.yml
.github/workflows/: ci.yml
squad/: __init__.py  agents.py  cli.py  config.py  orchestrator.py
tests/: test_squad.py
